--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="keywords" content="展览, SIGN CHINA, UBM，广州闻信展览服务有限公司，广州闻信展览，亚洲博闻有限公司，亚洲博闻，UBM Asia" />
-	<meta name="description" content="SIGN CHINA始于2003年，开创性地将激光雕刻/切割/焊接/折弯设备、标识标牌、灯箱、广告板材、POP、户内外数码喷印设备及墨水、数码打印耗材、广告机、数字显示/触控/软件及配套、LED显示屏、LED广告光源、LED照明、LED封装/芯片及设备等产品同台分区展示，成功为广告行业打造了首个最为完整的一站式商贸采购平台。经过十六年的全球推广和品牌累积，已发展成为全球最具影响力、层次最高的广告行业盛会之一，被业界誉为全球广告行业“奥斯卡”年度盛会。展会作为全球广告行业的重要 “风向标” ，将继续履行提升整个行业素质为使命，不断为展商和观众呈现更为完整、优质的广告生产加工制作产业链，带动广告行业走向国际化。">
-  <title>UBM官网</title>
+  <!-- <meta name="keywords" content="sign china exhibition, sign exhibition shanghai, sign exhibition asia, shanghai sign show, laser engraver, fiber laser cutting machine; cnc router; wide format printer, vehicle wrapping, car wrap; digital printing, inkjet printer, textile printing, t-shirt printing; screen printing; printing material, component; signage, lightbox, banner, channel letter, led sign, neon sign, outdoor sign; LED display, advertising display" />
+  <meta name="description" content="Sign Exhibition in Asia that showcase dynamic indoor, outdoor display sign, manufacturing equipment, laser engraver, cnc router, digital inkjet printer, screen printer, supporting accessories and supplies."> -->
+  <meta name="keywords" content="SIGN CHINA始于2003年，开创性地将激光雕刻/切割/焊接/折弯设备、标识标牌、灯箱、广告板材、POP、户内外数码喷印设备及墨水、数码打印耗材、广告机、数字显示/触控/软件及配套、LED显示屏、LED广告光源、LED照明、LED封装/芯片及设备等产品同台分区展示，成功为广告行业打造了首个最为完整的一站式商贸采购平台。经过十六年的全球推广和品牌累积，已发展成为全球最具影响力、层次最高的广告行业盛会之一，被业界誉为全球广告行业“奥斯卡”年度盛会。展会作为全球广告行业的重要 “风向标” ，将继续履行提升整个行业素质为使命，不断为展商和观众呈现更为完整、优质的广告生产加工制作产业链，带动广告行业走向国际化。" />
+	<meta name="description" content="展览，广州闻信展览服务有限公司，广州闻信展览，亚洲博闻有限公司，亚洲博闻。">
+  <title></title>
 </head>
 
 <body>
